<resources>
    <string name="app_name">AnaLogByAndroid</string>

    <string name="welcom_text">加载中...</string>
    <string name="login_phone_hint">手机号</string>
    <string name="login_verify_hint">验证码</string>
    <string name="login_psd_hint">密码</string>
    <string name="login">登录</string>
    <string name="toast_fail">获取数据失败</string>
    <string name="login_out">退出登录</string>
    <string name="paihang">排行榜</string>
    <string name="my_info">个人信息</string>
    <string name="exit">退出</string>
</resources>
