<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="80dp"
        android:paddingRight="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/login_icon"
                android:src="@drawable/icon_phone" />

            <android.support.v7.widget.AppCompatEditText
                android:hint="@string/login_phone_hint"
                android:inputType="number"
                android:maxLength="11"
                android:id="@+id/edit_phone"
                style="@style/login_edit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_verify"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/login_icon"
                android:src="@drawable/icon_msg" />

            <android.support.v7.widget.AppCompatEditText
                android:inputType="number"
                android:maxLength="10"
                android:id="@+id/edit_code"
                android:hint="@string/login_verify_hint"
                style="@style/login_edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/login_icon"
                android:src="@drawable/icon_psd" />

            <android.support.v7.widget.AppCompatEditText
                android:hint="@string/login_psd_hint"
                android:maxLength="15"
                android:id="@+id/edit_psd"
                style="@style/login_edit" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/btn_login"
                style="@style/login_icon"
                android:src="@drawable/icon_login"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layout_login"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/login"
                    style="@style/normal_text"/>
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/icon_login_btn"
                    style="@style/login_icon"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/btn_rigist"
                style="@style/login_icon"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_regist" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>