<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp">

    <LinearLayout
        android:id="@+id/exit_layout"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_exit"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center_vertical"
        android:src="@drawable/exit_selector" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_gravity="center_vertical"
            style="@style/normal_text"
            android:text="@string/exit"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/paihang_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/paihang" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_gravity="center_vertical"
                style="@style/normal_text"
                android:text="@string/paihang"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/me" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_gravity="center_vertical"
                style="@style/normal_text"
                android:text="@string/my_info"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>